fix header gap

--- a/public/css/projects-styles.css
+++ b/public/css/projects-styles.css
@@ -114,7 +114,7 @@ p {
 
 .header-cont.enter-content {
     position:fixed;
-    top: 57px;
+    top: 56px;
 }
 
 .header {
